yaml/cassandra-cluster.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: cassandra-cluster
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      containers:
      - name: cassandra-cluster
        image: cassandra
        ports:
        - containerPort: 7000
        - containerPort: 7001
        - containerPort: 7199
        - containerPort: 9042
        - containerPort: 9160
